Enhanced object detection with crop tested on new use cases.

--- a/object_detection_scripts/CogVLM_setup.ipynb
+++ b/object_detection_scripts/CogVLM_setup.ipynb
@@ -15,7 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "HOME = os.getcwd()\n",
     "print(HOME)"
    ]
